# dzieciotron

./: .gitignore  CMakeLists.txt  readme
src/: CMakeLists.txt  base_hubber.hpp  defines.hpp  exceptions.hpp  hubber.cpp  hubber.hpp  locationer.cpp  locationer.hpp  logger.cpp  logger.hpp  lucipher.cpp  lucipher.hpp  main.cpp  pipeline.cpp  pipeline.hpp  pipeline_result.cpp  pipeline_result.hpp  task.cpp  task.hpp  utils.cpp  utils.hpp  view_sender.cpp  view_sender.hpp
src/debug/: dummy_hubber.hpp  dummy_pipeline.cpp  dummy_pipeline.hpp  view_shower.cpp  view_shower.hpp
system/: 20-dzieciotron.rules  PKGBUILD  dzieciotron-sender  dzieciotron-sender.service  dzieciotron.service  dzieciotron.sysusers  dzieciotron.tmpfiles
